# OpenGL-Game

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Doxyfile  RessourcesManager.cpp  RessourcesManager.h  Shader.cpp  Shader.h  TerrainPage.cpp  TerrainPage.h  Texture.h  Textures.cpp  Textures.h  main.cpp  viewer.cpp  viewer.h
assets/terrain/: heightmap.tga
assets/terrain/shaders/: ad_vertex.glsl
src/: AssimpMeshEntity.cpp  AssimpMeshEntity.h  AxisEntity.cpp  AxisEntity.h  Camera.cpp  Camera.h  Debug.h  DirectionalLight.cpp  DirectionalLight.h  Entity.h  EnvironmentSettings.cpp  EnvironmentSettings.h  FlagEntity.cpp  FlagEntity.h  GrassEntity.cpp  GrassEntity.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  ParticleGenerator.cpp  ParticleGenerator.h  RessourcesManager.cpp  RessourcesManager.h  Shader.cpp  Shader.h  SkyboxEntity.cpp  SkyboxEntity.h  SpotLight.cpp  SpotLight.h  Terrain.cpp  Terrain.h  TerrainPage.cpp  TerrainPage.h  Texture.cpp  Texture.h  Vertex.h  Viewer.cpp  (+6 more)
